Fix background color in dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body.dark-mode {
     background-color: rgb(71, 94, 117); 
     color: white !important; 
 
-    background-color: rgb(72, 94, 117); 
+    background-color: 
 }
 
 
